<resources>
    <string name="app_name">ActivityLifecycle</string>
    <string name="new_app_name">Avengers</string>
    <string name="logo_image">Logo Image</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>